    author name within brakets and the comment:

S <mave> comment goes here

   where S can be one of the following symbols:
    '+' : means that something has been added to NNFW
    '-' : means that something has been dropped from NNFW
    'B' : means a BugFix
    'C' : means that something has been changed (e.g. implementation of a Class or a signature method)
==== End of Legend ====

    ==> 223 - 5/06/2007 <==

B <mave> fixed error while loading old-format XML files
C <mave> to Linker constructor by PropertySettings are now passed a pointer to BaseNeuralNet
+ <mave> added a generic data pointer (void*) to Variant and two template method for accessing it
B <mave> bugfix error in exporting template classes in Windows; added NNFW_TEMPLATE macro for 
		handling the exportation of template classes

    ==> 222 - 4/06/2007 <==

B <mave> bugfix in clone method of GaussFunction

    ==> 221 - 2/06/2007 <==

C <mave> new version of XML files; now the read-only properties are written
		as attributes of node <cluster> and passed to the constructor via
		Creatore registered into the Factory
+ <mave> add the method Propertized::convertStringTo for converting the string-type
		Variant readed from XML into the type required by class

    ==> 220 - 25/05/2007 <==

C <mave> improved error messages in xml processing
B <mave> added more exit-points in xml processing to avoid data corruption when
		mandatory tags are not present
B <mave> bugfixed segmentation fault when it's omitted the attribute 'i' in the xml 
		file for vector properties
B <mave> bugfixed segmentation fault when processed a non-existing property in xml files
+ <mave> added an experimental class nnfwString for future Unicode support
- <mave> the old nnfwMessage is not present anymore
C <mave> created a new system for warning, error and fatal messages
C <mave> NNFW_DEBUG is defined also when CMake built type is ReleaseWithDebugInfo

    ==> 218 - 25/05/2007 <==
